/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

buildscript {
    ext {
        opensearch_version = System.getProperty("opensearch.version", "3.6.0-SNAPSHOT")
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://ci.opensearch.org/ci/dbc/snapshots/maven/" }
        maven { url "https://ci.opensearch.org/ci/dbc/snapshots/lucene/" }
    }

    dependencies {
        classpath "org.opensearch.gradle:build-tools:${opensearch_version}"
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'jacoco'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'me.champeau.jmh' version '0.7.3'
    id 'io.github.reyerizo.gradle.jcstress' version '0.9.0'
}

apply plugin: 'opensearch.opensearchplugin'
apply plugin: 'opensearch.yaml-rest-test'
apply plugin: 'opensearch.internal-cluster-test'
apply plugin: 'opensearch.java-agent'

ext {
    projectSubstitutions = [:]
    licenseFile = rootProject.file('LICENSE.txt')
    noticeFile = rootProject.file('NOTICE.txt')
}

opensearchplugin {
    name 'storage-encryption'
    description 'Encrypts and decrypts index data at rest.'
    classname 'org.opensearch.index.store.CryptoDirectoryPlugin'
    version opensearch_version
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://ci.opensearch.org/ci/dbc/snapshots/maven/" }
    maven { url "https://ci.opensearch.org/ci/dbc/snapshots/lucene/" }
}

dependencies {
    compileOnly "org.opensearch:opensearch:${opensearch_version}"
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
    testImplementation "org.opensearch.test:framework:${opensearch_version}"
    testImplementation "commons-io:commons-io:2.13.0"
    testImplementation 'org.openjdk.jmh:jmh-core:1.37'
    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    testImplementation 'org.apache.commons:commons-math3:3.6.1'

    // Integration test dependencies
    testImplementation "org.opensearch.plugin:reindex-client:${opensearch_version}"
    internalClusterTestImplementation "org.opensearch.plugin:crypto-kms:${opensearch_version}"

    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.0'
    jmhImplementation "org.opensearch:opensearch:${opensearch_version}"
    jmhImplementation sourceSets.test.output
    api "io.netty:netty-buffer:4.2.5.Final"
    api "io.netty:netty-transport:4.2.5.Final"
    api "io.netty:netty-transport-native-unix-common:4.2.5.Final"
    api "io.netty:netty-transport-classes-io_uring:4.2.5.Final"
    api "io.netty:netty-common:4.2.5.Final"
    api "io.netty:netty-transport-native-io_uring:4.2.5.Final"
}

configurations.all {
    resolutionStrategy {
        force 'com.google.errorprone:error_prone_annotations:2.41.0'
    }
}

test {
    useJUnit()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
    systemProperty 'tests.security.manager', 'false'
    systemProperty 'tests.jvm.argline', '--enable-native-access=ALL-UNNAMED'
    jvmArgs += [
        '--enable-native-access=ALL-UNNAMED'
    ]
}

tasks.named('internalClusterTest').configure {
    systemProperty 'tests.security.manager', 'false'
    systemProperty 'java.security.policy', 'test.policy'
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
    jvmArgs += [
        '--enable-native-access=ALL-UNNAMED'
    ]
}

tasks.named('yamlRestTest').configure {
}

testClusters.yamlRestTest {
    setting 'plugins.crypto.enabled', 'true'
    setting 'node.store.crypto.pool_size_percentage', '0.0'
    setting 'node.store.crypto.warmup_percentage', '0.0'
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:-deprecation'
}

compileTestJava {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs << '-Xlint:-deprecation'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.addStringOption('Xdoclint:all', '-quiet')
    options.addStringOption('tag', 'opensearch.internal:a:Internal:')
    options.addStringOption('source', '25')
    failOnError = false
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

check.dependsOn jacocoTestReport

dependencyLicenses.enabled = false
thirdPartyAudit.enabled = false
loggerUsageCheck.enabled = false
validateNebulaPom.enabled = false
testingConventions.enabled = false
forbiddenApisMain.enabled = false
forbiddenApisTest.enabled = false
forbiddenApisJmh.enabled = false

// JMH source set is managed by the me.champeau.jmh plugin.
// The plugin auto-creates jmh source set, configurations, and tasks.
// We only need the jmh {} config block below to customize behavior.

// ---- JCStress configuration ----
jcstress {
    jcstressDependency 'org.openjdk.jcstress:jcstress-core:0.16'
    mode = 'default'
    verbose = true
}

// JCStress / test compile fixups: the opensearch build-tools plugin adds
// -proc:none to ALL JavaCompile tasks. JCStress needs annotation processing
// to generate META-INF/TestList, and JMH needs it for benchmark generation.
afterEvaluate {
    tasks.named('compileJcstressJava').configure {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
        options.compilerArgs.removeAll { it == '-proc:none' }
    }
    tasks.named('compileTestJava').configure {
        options.compilerArgs.removeAll { it == '-proc:none' }
    }
}

// Wire jcstress into the standard test task so ./gradlew test runs both
// unit tests and concurrency stress tests.
tasks.named('test').configure {
    finalizedBy tasks.named('jcstress')
}

task allTests {
    dependsOn test, internalClusterTest, yamlRestTest
    group = 'Verification'
    description = 'Runs all tests (Unit, Integration, YAML, and JCStress)'
}

jmh {
    jmhVersion = '1.37'
    includeTests = false
    duplicateClassesStrategy = DuplicatesStrategy.WARN
    jvmArgs = [
        '--enable-native-access=ALL-UNNAMED',
        '--enable-preview',
        '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
    fork = project.hasProperty('jmh.fork') ? project.property('jmh.fork') as int : 1
    warmupIterations = project.hasProperty('jmh.wi') ? project.property('jmh.wi') as int : 2
    iterations = project.hasProperty('jmh.i') ? project.property('jmh.i') as int : 3
    timeUnit = 'ms'
    if (project.hasProperty('jmh.includes')) {
        includes = [project.property('jmh.includes')]
    }
    if (project.hasProperty('jmh.prof')) {
        profilers = [project.property('jmh.prof')]
    }

    def timestamp = new Date().format('yyyyMMdd_HHmmss')
    resultsFile = project.file("build/jmh-results/jmh_${timestamp}.json")
    resultFormat = 'JSON'
}
// JMH fat JAR and runner are provided by the me.champeau.jmh plugin.
// Build:  ./gradlew jmhJar
// Run:    java --enable-native-access=ALL-UNNAMED -jar build/distributions/storage-encryption-jmh.jar [regex] [jmh-args]
// Examples:
//   java --enable-native-access=ALL-UNNAMED -jar build/distributions/storage-encryption-jmh.jar -l
//   java --enable-native-access=ALL-UNNAMED -jar build/distributions/storage-encryption-jmh.jar RadixBlockTable -wi 2 -i 3 -f 1

spotless {
    java {
        removeUnusedImports()
        importOrder 'java', 'javax', 'org', 'com'
        licenseHeaderFile 'spotless.license.java'
        eclipse().configFile rootProject.file('.eclipseformat.xml')
    }
}
// Copy JMH-generated resources (META-INF/BenchmarkList) and compiled harness classes
// into jmh classes output so forked JVMs can find them on the classpath.
tasks.register('copyJmhGeneratedResources', Copy) {
    from "${project.buildDir}/jmh-generated-resources"
    into "${project.buildDir}/classes/java/jmh"
    dependsOn tasks.named('jmhRunBytecodeGenerator')
}

tasks.register('copyJmhGeneratedClasses', Copy) {
    from "${project.buildDir}/jmh-generated-classes"
    into "${project.buildDir}/classes/java/jmh"
    dependsOn tasks.named('jmhCompileGeneratedClasses')
}

tasks.named('jmhCompileGeneratedClasses').configure {
    dependsOn tasks.named('copyJmhGeneratedResources')
}

// Ensure copy runs after compilation
tasks.named('jmhJar').configure {
    dependsOn tasks.named('copyJmhGeneratedClasses')
}

// Single task that runs the full JMH build pipeline: compile → generate → copy.
// Use this before running benchmarks from IntelliJ or command line.
tasks.register('jmhPrepare') {
    group = 'benchmark'
    description = 'Compile JMH sources, generate harness classes, and copy to classpath'
    dependsOn tasks.named('copyJmhGeneratedClasses')
}

// Also ensure IntelliJ module includes the generated classes directory
idea {
    module {
        testSources.from(file("${project.buildDir}/jmh-generated-classes"))
        testResources.from(file("${project.buildDir}/jmh-generated-resources"))
    }
}
